welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
		faireV()
                      ^MethodsPicture:26: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
		faireV()
                      ^MethodsPicture:28: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
		faireV()
                      ^MethodsPicture:30: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
		faireV()
                      ^